2007-03-06  Guillem Jover  <guillem@debian.org>

	* lib/compression.c (fd_fd_filter): New function, refactored. As
	a side effect the 'failed to exec' string gets unified, and all
	commands use oshite now.
	(decompress_cat): Use fd_fd_filter instead of the duped code.
	(compress_cat): Likewise.

2007-03-06  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-scanpackages.pl (usage): Documemt that the override
	file is now optional.
	(load_override): New function, refactored. Handle the case where
	'$override' is undefined.

2007-02-28  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-checkbuilddeps.pl: Make getopt parse '--admindir'.
	($admindir): New variable.
	(usage): Document '--admindir'.
	(parse_status): The status argument is not optional anymore.
	* scripts/dpkg-shlibdeps.pl: Parse '--admindir'.
	($admindir): New variable.
	($shlibsppdir): Initialize it after parsing the arguments.
	(usage): Document '--admindir'.
	* scripts/dpkg-buildpackage.sh: Parse '--admindir', and document it in
	usage output. Pass it to dpkg-checkbuilddeps.

2007-02-28  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl (usage): Use '$altdir' instead of
	hardcoding its value.

2007-02-28  Colin Watson  <cjwatson@ubuntu.com>

	* scripts/dpkg-gencontrol.pl: Add missing parenthesis in regular
	expression handling Origin, Bugs and Maintainer for control file
	fields.

2007-02-17  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-source.pl (checkstats): Take '$dscdir' as an explicit
	argument. Fix all callers.
	(checktype): Take '$dir', '$fn' and '$type' as explicit arguments. Fix
	all callers.

2007-02-17  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Check if '$alink' is defined before
	using '$aslavelinkcount{$alink}'. Only read_link_group if '$mode' is
	not 'install'.
	($dataread): Remove now unused variable.
	(read_link_group): New function (refactored).
	(find_best_version): Likewise.
	(display_link_group): Likewise.