@@ -1,3 +1,14 @@
+2007-03-12  Guillem Jover  <guillem@debian.org>
+
+	* lib/dpkg.h (compression_type): Rename to ...
+	(compress_type): ... this. Fix all users.
+	(CAT): Rename to ...
+	(compress_type_cat): ... this. Fix all users.
+	(GZ): Rename to ...
+	(compress_type_gzip): ... this. Fix all users.
+	(BZ2): Rename to ...
+	(compress_type_bzip2): ... this. Fix all users.
+
 2007-03-06  Guillem Jover  <guillem@debian.org>
 
 	* lib/compression.c (fd_fd_filter): New function, refactored. As
